--- a/graph.html
+++ b/graph.html
@@ -19,3 +19,9 @@
 		<script src = "/js/plot.js"></script>
 	</body>
 </html>
+<!--html>
+	<head>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.js"></script>
+		<script src = "/js/p5.js"></script>
+
+</html-->
